# Django-project

./: .gitignore  README.md  db.sqlite3  pyproject.toml
my_project/: settings.py  urls.py
physics/: admin.py  apps.py  models.py  tests.py  urls.py  views.py
physics/migrations/: 0001_initial.py
physics/templates/: 404.html  homepage.html  master.html  quiz.html  result.html
